--- a/app/Web.config
+++ b/app/Web.config
@@ -10,12 +10,16 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
-  
-  <connectionStrings>
-	  <add name="cnn" connectionString="server=DESKTOP-5H27NGT;database=EmpleadosReutilizacion;User ID=JonathanBernal;Password=Jonnymix90" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  
-  <system.web>
+
+	<connectionStrings>
+		<add name="cnn"
+			 connectionString="Server=.;Database=EmpleadosReutilizacion;Trusted_Connection=True;TrustServerCertificate=True;"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
+
+
+	<system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
