feat: implementar soporte para diferentes instancias SQL Server
- Modificar connection string para usar variable de entorno SQL_SERVER_NAME
- Agregar método GetConnectionString() en AccesoController
- Soporte automático para SQL Express y instancias personalizadas
- Fallback a servidor local (.) si no se configura variable

--- a/app/Web.config
+++ b/app/Web.config
@@ -12,9 +12,7 @@
 	</appSettings>
 
 	<connectionStrings>
-		<add name="cnn"
-			 connectionString="Server=.;Database=EmpleadosReutilizacion;Trusted_Connection=True;TrustServerCertificate=True;"
-			 providerName="System.Data.SqlClient" />
+		<add name="cnn" connectionString="Server={SERVER_NAME};Database=EmpleadosReutilizacion;Trusted_Connection=True;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 
